irrelevant auth docs cleaned
